--- a/style.css
+++ b/style.css
@@ -1,19 +1,4 @@
-#hero h1{
-  z-index:1;
-  color: #fff;
-  position: absolute;
-  margin-top:450px;
-  /*margin-left: 40px;*/
-  margin-right: 100px;
-  font-weight: 600;
-  /* font-size: 30px; */
-}
-#hero img{
-  width: 100%;
-  height:1000px;
-  object-fit: cover;
-  margin-top: 50px;
-}
+/*All Pages*/
 body{
   align-items: center;
   text-align: center;
@@ -34,7 +19,6 @@ nav{
   font-size: 25px;
   z-index: 1;
 }
-
 nav a{
   float: left;
   display: block;
@@ -43,26 +27,220 @@ nav a{
   padding: 14px 16px;
   text-decoration: none;
 }
-
 nav a:hover{
   background: #C7898E;
   color: #4A402B;
 }
-
 .active{
   color: #195257;
   font-weight: 100px;
 }
+h1{
+  font-size: 50px;
+  font-family: "Playfair Display";
+  color: #937D55;
+}
+h2{
+  font-size: 50px;
+  font-family: "Playfair Display";
+  font-weight: bold;
+  color: #195257;
+}
+h3{
+  font-size: 20px;
+  font-family: "Raleway";
+  color: #195257;
+}
+h4{
+  font-size: 25px;
+  font-family: "Playfair Display";
+  font-weight: bold;
+  color: #195257;
+}
+h5{
+  font-size: 25px;
+  font-family: "Playfair Display";
+  color: #937D55;
+}
+h6{
+  font-size: 20px;
+  font-family: "Raleway";
+  color: #937D55;
+}
+#header {
+  position: relative;
+  padding-top: 60px;
+}
+#header::after {
+  content: "";
+  position: absolute;
+  left:45%;
+  bottom: 0;
+  width: 10%;
+  height: 0px;
+}
+
+/*About Me Page*/
+#aboutme{
+  width: 800px;
+  height: 700px;
+  border-bottom: solid 8px #B8A176;
+  border-right: solid 8px #B8A176;
+  border-left: solid 8px #B8A176;
+  border-top: solid 8px #B8A176;
+  font-weight: bold;
+  background-color: #fffef4;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+#border{
+  margin-bottom: 50px;
+  display: inline-block;
+  border-bottom: solid 8px #B8A176;
+  border-right: solid 8px #B8A176;
+  border-left: solid 8px #B8A176;
+  border-top: solid 8px #B8A176;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 8px;
+  padding-bottom: 10px;
+}
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.border1{
+  border-left:3px solid #E1764C;
+  height: 680px;
+  position:absolute;
+  left: 35vw;
+  margin-top: 8%;
+}
+
+/*Experience Page*/
+.rotate90 {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+#bulletin{
+  z-index: 0;
+  position: absolute;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.frame{
+  position: relative;
+  width: 800px;
+  height: 800px;
+  z-index: 10;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 0;
+}
+.note {
+    width: 160px;
+    height: 160px;
+    box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
+    float: left;
+    margin: 8px;
+    border: 1px solid rgba(0,0,0,.25);
+    z-index: 0;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-bottom: 10px;
+}
+.one{
+  font-size: 20px;
+}
+.two{
+
+}
+.three{
+  font-size: 20px;
+}
+.sticky1{
+    transform: rotate(-3.5deg);
+    -webkit-transform: rotate(-3.5deg);
+    -moz-transform: rotate(-3.5deg);
+    background-color: #fffef4;
+}
+.sticky2{
+    transform: rotate(3.5deg);
+    -webkit-transform: rotate(3.5deg);
+    -moz-transform: rotate(3.5deg);
+    background-color: #fffef4;
+}
+.sticky3{
+    transform: rotate(-8deg);
+    -webkit-transform: rotate(-8deg);
+    -moz-transform: rotate(-8deg);
+    background-color: #fffef4;
+}
+.sticky4{
+    transform: rotate(8deg);
+    -webkit-transform: rotate(8deg);
+    -moz-transform: rotate(8deg);
+    background-color: #fffef4;
+}
+.text{
+    margin: 10px;
+    font-family: 'Raleway';
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+
+}
+.frame a:hover.note{
+    border: 1px solid #E9CC94;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    transform: scale(1.1);
+}
+#websites{
+  filter: drop-shadow(3px 3px 4px rgba(0,0,0,.5));
+}
+#websites:hover{
+  transform: translateY(-10px);
+}
+#desc{
+  font-size: 20px;
+  font-family: "Raleway";
+  color: #195257;
+}
+
+/*Contact Page*/
 #sticky{
+  font-style: italic;
+  font-family: "Playfair Display";
   position: relative;
   display: inline-block;
+  text-align: center;
   background-color: #FFC;
-  padding-top: 35px;
-  paddinig-left:35px;
+  padding-top: 15px;
+  padding-left:35px;
+  padding-right:35px;
   text-align: center;
   width: 400px;
   height: 120px;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 #sticky::before {
   content: "";
@@ -76,71 +254,87 @@ nav a:hover{
   box-shadow: 0px 13px 10px black;
   transform: rotate(4deg);
 }
-#frame{
-
-  position: relative;
-  display: inline-block;
-  border-image: url("assets/bulletinboard.png");
-  width: 60%;
-  height: 60%;
-  padding-left: 55px;
-  padding-top: 55px;
-  margin-top: 80px;
-}
-.note {
-    width: 160px;
-    height: 160px;
-    box-shadow: 0 3px 6px rgba(0,0,0,.25);
-    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
-    -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
-    float: left;
-    margin: 8px;
-    border: 1px solid rgba(0,0,0,.25);
-}
-.sticky1{
-    transform: rotate(-3.5deg);
-    -webkit-transform: rotate(-3.5deg);
-    -moz-transform: rotate(-3.5deg);
-    background-color: #C8AE7D;
-}
-.sticky2 {
-    transform: rotate(-3.5deg);
-    -webkit-transform: rotate(-3.5deg);
-    -moz-transform: rotate(-3.5deg);
-    background-color: #C8AE7D;
-}
-.text{
-    margin: 10px;
-    font-family: 'Raleway';
-}
-#frame a:hover.note {
-    border: 1px solid rgba(0,0,0,.75);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    transform: scale(1.1);
-}
-h1{
-  font-size: 25px;
-  font-family: "Playfair Display";
-  font-style: italic;
-  color: #937D55;
-}
-
-/*Contact Page*/
-
-#flexLinks{
+#social{
+  padding-top: 50px;
   display: flex;
-  width: auto;
-  margin: 10px 20vw;
+  align-items: center;
+  justify-content: center;
 }
-.flexitem{
-  .flexitem{
-  flex-grow: 1;
-  margin-left: 10px;
+.link{
+  margin: 15px;
+  filter: drop-shadow(3px 3px 4px rgba(0,0,0,.5));
 }
-.social{
-  width: 7vw;
-  min-width: 10px;
-  margin:auto;
-  display:block
+.link:hover{
+  transform: translateY(-10px);
+}
+
+/*Resume Page*/
+#resumeBlock{
+  margin-top: 150px;
+}
+.paper {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: inline-block;
+    border: 3px solid #333333;
+    font-size: 2.5rem;
+    border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+    text-transform: uppercase;
+    letter-spacing: 0.3ch;
+    background: #fffef4;
+    position: relative;
+}
+.paper::before {
+    content: "";
+    border: 2px solid #353535;
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0) scale(1.015) rotate(0.5deg);
+    border-radius: 1% 1% 2% 4% / 2% 6% 5% 4%;
+}
+
+/*Projects Page*/
+#project{
+  background-color: #fffef4;
+  padding: 15px 35px 55px 35px;
+  margin: 20vh 20vw;
+  filter: drop-shadow(3px 3px 4px rgba(0,0,0,.5));
+  border-radius: 10px;
+}
+#img{
+  filter: drop-shadow(5px 5px 6px rgba(0,0,0,.5));
+}
+#img:hover{
+  transform: translateY(-7px);
+}
+.button1{
+  filter: drop-shadow(3px 3px 4px rgba(0,0,0,.5));
+}
+.button1:hover{
+  transform: translateY(-7px);
+}
+button{
+  height: 30px;
+  width: 30px;
+  background-color: #C4DDF2;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 15px;
+  margin-right: 15px;
+  -moz-box-shadow: 6px 6px 5px #888;
+  -webkit-box-shadow: 6px 6px 5px #888;
+  box-shadow: 6px 6px 5px #888;
+}
+button:hover{
+  border: 2px white solid;
+}
+button:active{
+  background-color: #f4bc14;
 }
